# pressure

./: .gitignore  dprint.json  package.json  project.ts  readme.md  timeline.schema.json  timeline.ts  tsconfig.json
api/: .env  Cargo.toml
api/src/: db.rs  main.rs  routes.rs
components/: controls.tsx  fadethrough.tsx  icons.tsx  keybindselector.tsx  loop.tsx  play-skip.shapeshifter  play-skip.tsx  play-skip_60fps.css  pwatools.tsx  selection.tsx  slideprops.tsx  timeinput.tsx  videosourcesettings.tsx
pages/: _app.tsx  editor.tsx  index.tsx  present.tsx
pages/mobile/: index.tsx
public/: manifest.json  posts.json
public/editor/: manifest.json
public/mediainfo/: MediaInfoModule.wasm  mediainfo.d.ts  mediainfo.min.js  mediainfo.min.js.map  types.d.ts
public/mobile/: manifest.json
styles/: colors.css  dialog.css  editor.css  globals.css  keybindselector.css  keyframes.css  mobile.css  paper.css  presentation.css  selection.css  util.css
