[package]
name = "pressure-api"
version = "0.1.0"
authors = ["lonkaars <loek@pipeframe.xyz>"]
edition = "2018"

[dependencies]
tokio = "1.9.0"
log = "0.4.6"
dotenv = "0.14.1"
actix-rt = "1.1.1"
actix-web = "2.0"

[dependencies.mongodb]
version = "2.0.0-beta.2"
default-features = false
features = ["tokio-runtime"]

[dependencies.simple_logger]
version = "1.12.0"
default-features = false
features = ["color"]

